--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,19 +5,19 @@
 /* 0. ประกาศฟอนต์ RSU */
 @font-face {
   font-family: 'RSU';
-  src: url('../Fonts/RSU_light.ttf') format('truetype');
+  src: url('../fonts/RSU_light.ttf') format('truetype');
   font-weight: 300;
   font-style: normal;
 }
 @font-face {
   font-family: 'RSU';
-  src: url('../Fonts/RSU_Regular.ttf') format('truetype');
+  src: url('../fonts/RSU_Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 @font-face {
   font-family: 'RSU';
-  src: url('../Fonts/RSU_BOLD.ttf') format('truetype');
+  src: url('../fonts/RSU_BOLD.ttf') format('truetype');
   font-weight: bold;
   font-style: normal;
 }
